refactor(frontend,backend): phase 2 style unification and smtp hardening

--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -6,7 +6,7 @@
 
   <title>Política de Privacidad | Analytee</title>
 
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/css/main.min.css">
 
   <style>
     :root {
