--- a/aviso-legal.html
+++ b/aviso-legal.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aviso Legal | Analytee</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/css/main.min.css">
 </head>
 
 <body class="bg-[#F7F9FC] text-[#1A202C]">
